# rust-programming-contest-solutions

./: .gitignore  .travis.yml  Cargo.toml  README.md  add_bin.sh  generate_readme.sh  pack_bin.sh  problems.json
aoj/: 1585.rs  2644.rs  2890.rs  2900.rs  2955.rs  2956.rs  2957.rs  2962.rs  2965.rs  2966.rs  2970.rs  2971.rs  2976.rs  cgl_4_a.rs  dpl_3_b.rs  grl_3_c.rs  grl_5_c.rs
archives/aoj/: 2891.rs  2892.rs  2893.rs  2900.rs  3022.rs  acpc_2018_day3_a.rs  acpc_2018_day3_b.rs  acpc_2018_day3_c.rs  acpc_2018_day3_d.rs  acpc_2018_day3_e.rs  cgl_4_a.rs  grl_3_b.rs  grl_6_b.rs
archives/atcoder/: abc061_d.rs  abc076_d.rs  abc080_d.rs  abc085_d.rs  abc099_a.rs  abc105_d.rs  abc106_d.rs  abc109_a.rs  abc109_b.rs  abc110_b.rs  abc110_d.rs  agc002_c.rs  agc010_b.rs  agc016_c.rs  agc022_c.rs  agc026_b.rs  agc027_a.rs  agc027_c.rs  arc039_d.rs  arc055_b.rs  arc064_c.rs  arc077_c.rs  arc078_b.rs  arc079_b.rs  arc081_d.rs  arc082_c.rs  arc086_b.rs  arc089_a.rs  arc092_b.rs  arc092_d.rs  arc093_b.rs  arc096_a.rs  arc097_a.rs  arc098_b.rs  bitflyer2018_qual_e.rs  code_festival_2018_quala_b.rs  code_festival_2018_quala_c.rs  code_festival_2018_quala_d.rs  colopl2018_qual_c.rs  soundhound2018_summer_final_c.rs  (+3 more)
archives/atcoder/abc054/: abc054_d.rs
archives/atcoder/abc070/: abc070_d.rs
archives/atcoder/abc079/: abc079_d.rs
archives/atcoder/abc084/: abc084_d.rs
archives/atcoder/abc096/: abc096_d.rs
archives/atcoder/abc099/: abc099_c.rs
archives/atcoder/abc100/: abc100_a.rs  abc100_b.rs  abc100_d.rs
archives/atcoder/abc104/: abc104_d.rs
archives/atcoder/abc109/: abc109_d.rs
archives/atcoder/abc110/: abc110_a.rs
archives/atcoder/agc004/: agc004_d.rs
archives/atcoder/agc006/: agc006_c.rs
archives/atcoder/agc011/: agc011_c.rs
archives/atcoder/agc013/: agc013_b.rs
archives/atcoder/agc016/: agc016_b.rs
archives/atcoder/agc018/: agc018_c.rs
archives/atcoder/agc020/: agc020_a.rs  agc020_b.rs  agc020_c.rs
archives/atcoder/agc022/: agc022_a.rs
archives/atcoder/agc025/: agc025_c.rs
archives/atcoder/agc026/: agc026_b.rs
archives/atcoder/agc027/: agc027_b.rs
archives/atcoder/agc028/: agc028_a.rs  agc028_b.rs  agc028_c.rs
archives/atcoder/agc030/: agc030_b.rs
archives/atcoder/agc031/: agc031_c.rs
archives/atcoder/aising2019/: aising2019_e.rs
archives/atcoder/arc059/: arc059_c.rs  arc059_d.rs
archives/atcoder/arc063/: arc063_c.rs
archives/atcoder/arc064/: arc064_b.rs
archives/csacademy/: cookie-clicker.rs  growing-segment.rs  water-tower.rs
atcoder/: abc051_d.rs  abc057_d.rs  abc061_d.rs  abc073_d.rs  abc075_d.rs  abc085_a.rs  abc085_b.rs  abc085_c.rs  abc088_d.rs  abc089_d.rs  abc099_b.rs  abc100_c.rs  abc109_c.rs  abc110_d.rs  abc118_d.rs  abc123_d.rs  abc126_a.rs  abc126_b.rs  abc126_c.rs  abc126_d.rs  abc126_e.rs  abc127_a.rs  abc128_a.rs  abc128_b.rs  abc128_e.rs  abc128_f.rs  abc130_a.rs  abc130_b.rs  abc130_c.rs  abc130_d.rs  abc130_e.rs  abc130_f.rs  abc131_f.rs  abc132_a.rs  abc132_b.rs  abc132_c.rs  abc132_d.rs  abc132_e.rs  abc132_f.rs  abc133_a.rs  (+302 more)
atcoder/abc010/: abc010_4.rs
atcoder/abc099/: abc099_d.rs
atcoder/abc110/: abc110_c.rs
atcoder/abc119/: abc119_c.rs  abc119_d.rs
atcoder/abc126/: abc126_f.rs
atcoder/abc127/: abc127_b.rs  abc127_c.rs  abc127_d.rs  abc127_e.rs  abc127_f.rs
atcoder/abc128/: abc128_c.rs  abc128_d.rs
atcoder/agc001/: agc001_c.rs
atcoder/agc002/: agc002_d.rs
atcoder/agc003/: agc003_c.rs  agc003_d.rs
atcoder/agc004/: agc004_c.rs
atcoder/agc006/: agc006_c.rs
atcoder/agc008/: agc008_c.rs
atcoder/agc009/: agc009_b.rs
atcoder/agc012/: agc012_b.rs
atcoder/agc013/: agc013_c.rs
atcoder/agc024/: agc024_b.rs  agc024_d.rs
atcoder/agc025/: agc025_b.rs  agc025_d.rs
atcoder/agc028/: agc028_c.rs
atcoder/agc029/: agc029_a.rs  agc029_b.rs  agc029_c.rs  agc029_d.rs  agc029_e.rs
atcoder/agc030/: agc030_a.rs  agc030_b.rs
atcoder/agc031/: agc031_c.rs
atcoder/agc033/: agc033_a.rs  agc033_c.rs
atcoder/aising2019/: aising2019_e.rs
atcoder/arc055/: arc055_b.rs
atcoder/arc060/: arc060_b.rs  arc060_c.rs
atcoder/arc063/: arc063_b.rs
atcoder/arc066/: arc066_b.rs
atcoder/arc069/: arc069_c.rs
atcoder/arc074/: arc074_b.rs  arc074_c.rs
atcoder/arc076/: arc076_b.rs
atcoder/arc079/: arc079_d.rs
atcoder/arc081/: arc081_d.rs
atcoder/arc082/: arc082_d.rs
atcoder/arc084/: arc084_c.rs
atcoder/arc087/: arc087_b.rs
atcoder/arc089/: arc089_b.rs  arc089_c.rs
atcoder/arc090/: arc090_b.rs  arc090_c.rs
atcoder/arc091/: arc091_b.rs  arc091_c.rs
atcoder/arc092/: arc092_a.rs  arc092_b.rs  arc092_c.rs
atcoder/arc094/: arc094_b.rs  arc094_c.rs
atcoder/arc095/: arc095_a.rs
atcoder/arc098/: arc098_b.rs
atcoder/arc100/: arc100_c.rs
atcoder/arc101/: arc101_b.rs
atcoder/arc102/: arc102_b.rs
atcoder/arc103/: arc103_b.rs
atcoder/bcu30/: bcu30_f.rs
atcoder/bitflyer2018-final-open/: bitflyer2018_final_b.rs
atcoder/bitflyer2018-qual/: bitflyer2018_qual_e.rs
atcoder/cf16-exhibition-final/: cf16_exhibition_final_c.rs
atcoder/cf17-final-open/: cf17_final_b.rs
atcoder/cf17_final/: cf17_final_c.rs  cf17_final_d.rs  cf17_final_e.rs
atcoder/code-festival-2016-qualc/: codefestival_2016_qualC_d.rs
atcoder/code-festival-2017-qualc/: code_festival_2017_qualc_d.rs
atcoder/code-festival-2018-quala/: code_festival_2018_quala_a.rs  code_festival_2018_quala_d.rs
atcoder/colopl2018-final/: colopl2018_final_b.rs
atcoder/dp/: dp_q.rs  dp_r.rs
atcoder/jag2014summer-day4/: icpc2014summer_day4_f.rs
atcoder/mujin-pc-2018/: mujin_pc_2018_c.rs  mujin_pc_2018_d.rs
atcoder/nikkei2019-qual/: nikkei2019_qual_e.rs
atcoder/soundhound2018/: soundhound2018_c.rs
atcoder/tenka1-2017/: tenka1_2017_e.rs
atcoder/tenka1-2018/: tenka1_2018_d.rs
atcoder/yahoo-procon2018-qual/: yahoo_procon2018_qual_b.rs
atcoder/yahoo-procon2019-qual/: yahoo_procon2019_qual_f.rs
codejam/2019-round1b/: draupnir.rs  fair_fight.rs  manhattan_crepe_cart.rs
common/: scanner.rs
readme-generator/: Cargo.toml
readme-generator/src/: main.rs
workspace/: Cargo.toml  pack_bin.sh
(+63 files in other folders)
