[package]
name = "rust-programming-contest-solutions"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]

[dependencies]
rand = "0.4"

# AOJ
[[bin]]
name = "aoj2644"
path = "aoj/2644.rs"
[[bin]]
name = "aoj1585"
path = "aoj/1585.rs"

# AtCoder
[[bin]]
name = "cf17_final_a"
path = "atcoder/cf17_final/cf17_final_a.rs"
[[bin]]
name = "cf17_final_b"
path = "atcoder/cf17_final/cf17_final_b.rs"
[[bin]]
name = "cf17_final_c"
path = "atcoder/cf17_final/cf17_final_c.rs"
[[bin]]
name = "cf17_final_d"
path = "atcoder/cf17_final/cf17_final_d.rs"
[[bin]]
name = "cf17_final_e"
path = "atcoder/cf17_final/cf17_final_e.rs"
[[bin]]
name = "icpc2014summer_day4_f"
path = "atcoder/jag2014summer-day4/icpc2014summer_day4_f.rs"
[[bin]]
name = "agc002_c"
path = "atcoder/agc002/agc002_c.rs"
[[bin]]
name = "agc002_d"
path = "atcoder/agc002/agc002_d.rs"
[[bin]]
name = "agc001_c"
path = "atcoder/agc001/agc001_c.rs"
[[bin]]
name = "agc001_b"
path = "atcoder/agc001/agc001_b.rs"
[[bin]]
name = "agc001_d"
path = "atcoder/agc001/agc001_d.rs"
[[bin]]
name = "arc060_b"
path = "atcoder/arc060/arc060_b.rs"
[[bin]]
name = "agc003_c"
path = "atcoder/agc003/agc003_c.rs"
[[bin]]
name = "agc003_d"
path = "atcoder/agc003/agc003_d.rs"
[[bin]]
name = "abc085_a"
path = "atcoder/abc085/abc085_a.rs"
[[bin]]
name = "abc085_b"
path = "atcoder/abc085/abc085_b.rs"
[[bin]]
name = "abc085_c"
path = "atcoder/abc085/abc085_c.rs"
[[bin]]
name = "abc085_d"
path = "atcoder/abc085/abc085_d.rs"
[[bin]]
name = "arc089_a"
path = "atcoder/arc089/arc089_a.rs"
[[bin]]
name = "arc089_b"
path = "atcoder/arc089/arc089_b.rs"
[[bin]]
name = "soundhound2018_c"
path = "atcoder/soundhound2018/soundhound2018_c.rs"
[[bin]]
name = "soundhound2018_d"
path = "atcoder/soundhound2018/soundhound2018_d.rs"
[[bin]]
name = "arc090_a"
path = "atcoder/arc090/arc090_a.rs"
[[bin]]
name = "arc090_b"
path = "atcoder/arc090/arc090_b.rs"
[[bin]]
name = "arc090_c"
path = "atcoder/arc090/arc090_c.rs"
[[bin]]
name = "arc055_b"
path = "atcoder/arc055/arc055_b.rs"
[[bin]]
name = "yahoo_procon2018_qual_a"
path = "atcoder/yahoo-procon2018-qual/yahoo_procon2018_qual_a.rs"
[[bin]]
name = "yahoo_procon2018_qual_b"
path = "atcoder/yahoo-procon2018-qual/yahoo_procon2018_qual_b.rs"
[[bin]]
name = "yahoo_procon2018_qual_c"
path = "atcoder/yahoo-procon2018-qual/yahoo_procon2018_qual_c.rs"
