[package]
name = "rust-programming-contest-solutions"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]

[dependencies]
rand = "0.4"

# AOJ
[[bin]]
name = "aoj2644"
path = "aoj/2644.rs"
[[bin]]
name = "aoj1585"
path = "aoj/1585.rs"

# AtCoder
[[bin]]
name = "cf17_final_a"
path = "atcoder/cf17_final_a.rs"
[[bin]]
name = "cf17_final_b"
path = "atcoder/cf17_final_b.rs"
[[bin]]
name = "cf17_final_c"
path = "atcoder/cf17_final_c.rs"
[[bin]]
name = "cf17_final_d"
path = "atcoder/cf17_final_d.rs"
[[bin]]
name = "cf17_final_e"
path = "atcoder/cf17_final_e.rs"
[[bin]]
name = "icpc2014summer_day4_f"
path = "atcoder/icpc2014summer_day4_f.rs"
[[bin]]
name = "agc002_c"
path = "atcoder/agc002_c.rs"
[[bin]]
name = "agc002_d"
path = "atcoder/agc002_d.rs"
[[bin]]
name = "agc001_c"
path = "atcoder/agc001_c.rs"
[[bin]]
name = "agc001_b"
path = "atcoder/agc001_b.rs"
[[bin]]
name = "agc001_d"
path = "atcoder/agc001_d.rs"
[[bin]]
name = "arc060_b"
path = "atcoder/arc060_b.rs"
[[bin]]
name = "agc003_c"
path = "atcoder/agc003_c.rs"
[[bin]]
name = "agc003_d"
path = "atcoder/agc003_d.rs"
[[bin]]
name = "abc085_a"
path = "atcoder/abc085_a.rs"
[[bin]]
name = "abc085_b"
path = "atcoder/abc085_b.rs"
[[bin]]
name = "abc085_c"
path = "atcoder/abc085_c.rs"
[[bin]]
name = "abc085_d"
path = "atcoder/abc085_d.rs"
[[bin]]
name = "arc089_a"
path = "atcoder/arc089_a.rs"
[[bin]]
name = "arc089_b"
path = "atcoder/arc089_b.rs"
[[bin]]
name = "arc089_c"
path = "atcoder/arc089_c.rs"
[[bin]]
name = "arc091_b"
path = "atcoder/arc091_b.rs"
[[bin]]
name = "soundhound2018_c"
path = "atcoder/soundhound2018_c.rs"
[[bin]]
name = "soundhound2018_d"
path = "atcoder/soundhound2018_d.rs"
[[bin]]
name = "arc090_a"
path = "atcoder/arc090_a.rs"
[[bin]]
name = "arc090_b"
path = "atcoder/arc090_b.rs"
[[bin]]
name = "arc090_c"
path = "atcoder/arc090_c.rs"
[[bin]]
name = "arc092_a"
path = "atcoder/arc092_a.rs"
[[bin]]
name = "arc092_b"
path = "atcoder/arc092_b.rs"
[[bin]]
name = "arc092_c"
path = "atcoder/arc092_c.rs"
[[bin]]
name = "arc092_d"
path = "atcoder/arc092_d.rs"
[[bin]]
name = "arc055_b"
path = "atcoder/arc055_b.rs"
[[bin]]
name = "abc089_d"
path = "atcoder/abc089_d.rs"
[[bin]]
name = "abc088_d"
path = "atcoder/abc088_d.rs"
[[bin]]
name = "abc084_d"
path = "atcoder/abc084_d.rs"
[[bin]]
name = "abc080_d"
path = "atcoder/abc080_d.rs"
[[bin]]
name = "yahoo_procon2018_qual_a"
path = "atcoder/yahoo_procon2018_qual_a.rs"
[[bin]]
name = "yahoo_procon2018_qual_b"
path = "atcoder/yahoo_procon2018_qual_b.rs"
[[bin]]
name = "yahoo_procon2018_qual_c"
path = "atcoder/yahoo_procon2018_qual_c.rs"
[[bin]]
name = "yahoo_procon2018_qual_d"
path = "atcoder/yahoo_procon2018_qual_d.rs"
